# HDLM

./: .gitignore  LICENSE  README.md  convert_checkpoint.py  hdlm.sub  pyproject.toml  requirements.txt
hdlm/: __init__.py  checkpoints.py  compute_clusters.py  data.py  diffusion_process.py  loss.py  modeling.py  optimizer.py  pipeline.py  sampling.py  train.py  trainer.py  utils.py
hdlm/clusters/: semantic_centroids_bert-base-uncased_64_lm1b.pt  semantic_centroids_gidd-base-p_unif-0.0_128.pt  semantic_centroids_gidd-base-p_unif-0.0_16.pt  semantic_centroids_gidd-base-p_unif-0.0_2.pt  semantic_centroids_gidd-base-p_unif-0.0_256.pt  semantic_centroids_gidd-base-p_unif-0.0_32.pt  semantic_centroids_gidd-base-p_unif-0.0_4.pt  semantic_centroids_gidd-base-p_unif-0.0_64.pt  semantic_centroids_gidd-base-p_unif-0.0_8.pt  semantic_centroids_gidd-small-p_unif-0.0_1.pt  semantic_centroids_gidd-small-p_unif-0.0_128.pt  semantic_centroids_gidd-small-p_unif-0.0_16.pt  semantic_centroids_gidd-small-p_unif-0.0_2.pt  semantic_centroids_gidd-small-p_unif-0.0_256.pt  semantic_centroids_gidd-small-p_unif-0.0_32.pt  semantic_centroids_gidd-small-p_unif-0.0_4.pt  semantic_centroids_gidd-small-p_unif-0.0_64.pt  semantic_centroids_gidd-small-p_unif-0.0_8.pt  semantic_cluster_dict_bert-base-uncased_64_lm1b.pt  semantic_cluster_dict_gidd-base-p_unif-0.0_128.pt  semantic_cluster_dict_gidd-base-p_unif-0.0_16.pt  semantic_cluster_dict_gidd-base-p_unif-0.0_2.pt  semantic_cluster_dict_gidd-base-p_unif-0.0_256.pt  semantic_cluster_dict_gidd-base-p_unif-0.0_32.pt  (+12 more)
hdlm/configs/: gen_ppl.yaml  (+11 more)
(+13 files in other folders)
